@@ -3,9 +3,10 @@
 #' Define priors for specific parameters or classes of parameters
 #'
 #' @param prior A character string defining a distribution in \pkg{Stan} language
-#' @param class The parameter class. Defaults to \code{"b"} (fixed effects). 
+#' @param class The parameter class. Defaults to \code{"b"} 
+#'   (i.e. population-level effects). 
 #'   See 'Details' for other valid parameter classes. 
-#' @param coef Name of the (population- or group-level) parameter  
+#' @param coef Name of the (population- or group-level) parameter.  
 #' @param group Grouping factor of group-level parameters.
 #' @param nlpar Name of a non-linear / auxiliary parameter. 
 #'   Only used in non-linear / distributional models.
