@@ -1,0 +1,18 @@
+  /* compute the logm1 link 
+   * Args: 
+   *   p: a positive scalar
+   * Returns: 
+   *   a scalar in (-Inf, Inf)
+   */ 
+   real logm1(real y) { 
+     return log(y - 1);
+   }
+  /* compute the inverse of the logm1 link 
+   * Args: 
+   *   y: a scalar in (-Inf, Inf)
+   * Returns: 
+   *   a positive scalar
+   */ 
+   real expp1(real y) { 
+     return exp(y) + 1;
+   }
